# parity_test_task

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
backend/: pyproject.toml
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
backend/images/: apps.py  models.py  serializers.py  urls.py  views.py
backend/images/migrations/: 0001_initial.py
config/: settings.py
deploy/: django.dockerfile  docker-compose.yml  vuejs.dockerfile
deploy/common/: entrypoint.sh
frontend/: package-lock.json  vite.config.js
frontend/src/: App.vue  axios.js  main.js
frontend/src/components/: ImageForm.vue  ImageList.vue
images/: models.py  serializers.py
